css/custom.css
.navbar {
  margin-bottom: 0px;
  text-align: center;
}

.navbar-collapse{
    text-align: center;
}

.navbar-custom{
    background-color: white;
}

.navbar-custom .nav li a {
    color: #000;
}

.navbar-custom .nav li a:hover, .navbar-custom .nav li a:focus {
    color: #636363;
}

.navbar-custom .navbar-brand {
    color: #000;
}

.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
    color: #000;
}

.intro-header {
    background: no-repeat;
    background-size: cover;
    height: 700px;
}

.container-fluid-custom {
    text-align: center;
    display: inline-block;
}

.homepage-text {
    padding: 290px 0;
    text-align: center;
    color: #fff;
}

.carousel-inner {
    height: 600px;
}

.carousel-inner > .item > img {
    line-height: 1;
    height: 600px;
    position: relative;
    left: 12%;
}

.carousel-control.left {
    background-image: none;
}

.carousel-control.right {
    background-image: none;
}

.comment-box {
    text-align: center;
}

.navbar-collapse.collapse {
  display: block!important;
}

.navbar-nav>li, .navbar-nav {
  float: left !important;
}

.navbar-nav.navbar-right:last-child {
  margin-right: -15px !important;
}

.navbar-right {
  float: right!important;
}

